[package]
name = "macos_timestamp_ns"
version = "0.1.3"
edition = "2024"
authors = ["Wenqing Zong"]
documentation = "https://docs.rs/macos_timestamp_ns/latest/macos_timestamp_ns/"
description = "Provide nano second timestamps for MacOS platform"
keywords = ["MacOS", "timestamp", "nanosecond"]
repository = "https://github.com/WenqingZong/MacOSTimestampNs"
license = "GPL-3.0-only"

[dependencies]
chrono = { version = "0.4.42", optional = true}
libc = "0.2.178"

[[example]]
name = "example"
path = "examples/example.rs"

exclude = [
    "examples/",
    ".github/",
    ".gitignore"
]

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[package.metadata.docs.rs]
all-features = true

